bad/incr_uop_bneg.example_compiler_output
ERROR
[1mbad/incr_uop_bneg.lat:4:10: [1;31merror: [0;1mexpression is not assignable[m
	(!false)++;
	        [1;32m^[m
[1mbad/incr_uop_bneg.lat:4:2: [1;34mnote: [0;1mexpression starts here[m
	(!false)++;
	[1;32m^[m
